--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
         - Actividad 2: individual/Actividad.md
         - Actividad 3: individual/Actividad 2.md
         - Actividad 4: individual/Actividad 3.md
+        - Actividad 5: individual/Actividad 4.md
     - Colaborativas:
         - Actividad 1: todo.md
 copyright: ©GMDXX
